syntax = "proto3";

package skyeye;
option go_package = "./;pb";

message IP {
  bytes slice = 1;
}

message ContinuousPingJob {
  uint64 jobId = 1;
  uint32 intervalMs = 2;
  uint32 timeoutMs =3;
  repeated IP destinations = 4;
  uint32 count = 5;
  oneof source {
    string port = 6;
    IP ip = 7;
  }
}

message ContinuousPingResult {
  uint64 task_id = 1;
  IP destination = 2;
  uint32 count = 3;
  uint32 loss = 4;
  repeated int64 rtt_nano = 5;
}

message CancelContinuousJob {
  uint64 taskId = 1;
}

message ControllerMessage {
  oneof payload {
    CancelContinuousJob cancel_job = 1;
    ContinuousPingJob continuous_ping_job = 2;
  }
}

message Register {
  string agent_id = 1;
  string version = 2;
  uint64 capabilities = 3;
  string hostname = 4;
  map<string, IP> interface_ipaddr = 5;
}

message Heartbeat {
  uint64 timestamp = 1;
}

message AgentMessage {
  oneof payload {
    Register register = 1;
    Heartbeat heartbeat = 2;
    ContinuousPingResult continuous_ping_result = 3;
  }
}

service ManagementService {
  rpc Stream(stream AgentMessage) returns (stream ControllerMessage);
}
